--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+   
     <script src='funciones.js'></script>
+    <script src='variables.js'></script>
 </head>
 <body>
     
